--- a/projects/fyyur/code/requirements.txt
+++ b/projects/fyyur/code/requirements.txt
@@ -1,12 +1,16 @@
+alembic==1.7.1
 Babel==2.9.0
 click==8.0.1
 Flask==2.0.1
+Flask-Migrate==3.1.0
 Flask-Moment==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 greenlet==1.1.0
+importlib-resources==5.2.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.5
 MarkupSafe==2.0.1
 psycopg2==2.9.1
 python-dateutil==2.6.0
@@ -15,3 +19,4 @@ six==1.16.0
 SQLAlchemy==1.4.20
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp==3.5.0
