--- a/projects/fyyur/code/requirements.txt
+++ b/projects/fyyur/code/requirements.txt
@@ -7,6 +7,7 @@ Flask-Moment==0.11.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 greenlet==1.1.0
+gunicorn==20.1.0
 importlib-resources==5.2.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
