--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
-psycopg2==2.9.1
+psycopg2-binary==2.8.2
+# psycopg2==2.9.1
 python-dateutil==2.6.0
 pytz==2021.1
 six==1.16.0
